[FAB-8220] enable mutual tls for peer connection
Change-Id: I02849daeb685a6adbcc97711f179cfafc73f5b25
Signed-off-by: Luis Sanchez <sanchezl@us.ibm.com>