@@ -49,7 +49,9 @@ public abstract class ChaincodeBase implements Chaincode {
 	private int port = DEFAULT_PORT;
 	private String hostOverrideAuthority = "";
 	private boolean tlsEnabled = false;
-	private String rootCertFile = "/etc/hyperledger/fabric/peer.crt";
+	private String tlsClientKeyPath = "/etc/hyperledger/fabric/client.key";
+	private String tlsClientCertPath = "/etc/hyperledger/fabric/client.crt";
+	private String tlsClientRootCertPath = "/etc/hyperledger/fabric/peer.crt";
 
 	private String id;
 
@@ -58,6 +60,8 @@ public abstract class ChaincodeBase implements Chaincode {
 	private final static String CORE_PEER_TLS_ENABLED = "CORE_PEER_TLS_ENABLED";
 	private final static String CORE_PEER_TLS_SERVERHOSTOVERRIDE = "CORE_PEER_TLS_SERVERHOSTOVERRIDE";
 	private static final String CORE_PEER_TLS_ROOTCERT_FILE = "CORE_PEER_TLS_ROOTCERT_FILE";
+	private static final String ENV_TLS_CLIENT_KEY_PATH = "CORE_TLS_CLIENT_KEY_PATH";
+	private static final String ENV_TLS_CLIENT_CERT_PATH = "CORE_TLS_CLIENT_CERT_PATH";
 
 	/**
 	 * Start chaincode
@@ -94,7 +98,7 @@ public abstract class ChaincodeBase implements Chaincode {
 				} else {
 					host = cl.getOptionValue("peerAddress");
 				}
-				port = new Integer(host.split(":")[1]);
+				port = Integer.valueOf(host.split(":")[1]);
 				host = host.split(":")[0];
 			}
 			if (cl.hasOption('s')) {
@@ -127,7 +131,13 @@ public abstract class ChaincodeBase implements Chaincode {
 				this.hostOverrideAuthority = System.getenv(CORE_PEER_TLS_SERVERHOSTOVERRIDE);
 			}
 			if (System.getenv().containsKey(CORE_PEER_TLS_ROOTCERT_FILE)) {
-				this.rootCertFile = System.getenv(CORE_PEER_TLS_ROOTCERT_FILE);
+				this.tlsClientRootCertPath = System.getenv(CORE_PEER_TLS_ROOTCERT_FILE);
+			}
+			if (System.getenv().containsKey(ENV_TLS_CLIENT_KEY_PATH)) {
+				this.tlsClientKeyPath = System.getenv(ENV_TLS_CLIENT_KEY_PATH);
+			}
+			if (System.getenv().containsKey(ENV_TLS_CLIENT_CERT_PATH)) {
+				this.tlsClientCertPath = System.getenv(ENV_TLS_CLIENT_CERT_PATH);
 			}
 		}
 	}
@@ -139,7 +149,10 @@ public abstract class ChaincodeBase implements Chaincode {
 		if (tlsEnabled) {
 			logger.info("TLS is enabled");
 			try {
-				final SslContext sslContext = GrpcSslContexts.forClient().trustManager(new File(this.rootCertFile)).build();
+				final SslContext sslContext = GrpcSslContexts.forClient()
+						.trustManager(new File(this.tlsClientRootCertPath))
+						.keyManager(new File(this.tlsClientCertPath), new File(this.tlsClientKeyPath))
+						.build();
 				builder.negotiationType(NegotiationType.TLS);
 				if (!hostOverrideAuthority.equals("")) {
 					logger.info("Host override " + hostOverrideAuthority);
